[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/AdvButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/Particles/electron.png" type="Texture" id=2]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=4]
[ext_resource path="res://Scenes/CloseButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Graphics/Particles/proton.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Particles/neutron.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_bottom = 12.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Background" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -296.0
margin_right = 512.0
margin_bottom = 296.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="." instance=ExtResource( 5 )]

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 38 )
text = "INVENTORY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 24.0
margin_top = 56.0
margin_right = -24.0
margin_bottom = 90.0
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" parent="Tabs" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 196.0
margin_bottom = 34.0
size_flags_horizontal = 3
button_text = "ITEMS"

[node name="Materials" parent="Tabs" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 195.0
margin_right = 391.0
margin_bottom = 34.0
size_flags_horizontal = 3
button_text = "MATERIALS"

[node name="Metals" parent="Tabs" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 390.0
margin_right = 586.0
margin_bottom = 34.0
size_flags_horizontal = 3
button_text = "METALS"

[node name="Atoms" parent="Tabs" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 585.0
margin_right = 781.0
margin_bottom = 34.0
size_flags_horizontal = 3
button_text = "ATOMS"

[node name="Particles" parent="Tabs" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 780.0
margin_right = 976.0
margin_bottom = 34.0
size_flags_horizontal = 3
button_text = "PARTICLES"

[node name="Control" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 104.0
margin_right = -24.0
margin_bottom = -24.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control/VBox"]
margin_right = 912.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="Info" type="Label" parent="Control/VBox"]
margin_top = 9.0
margin_right = 912.0
margin_bottom = 45.0
custom_styles/normal = SubResource( 1 )
text = "Information"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Control/VBox"]
margin_top = 49.0
margin_right = 912.0
margin_bottom = 49.0
size_flags_horizontal = 5
custom_constants/vseparation = 50
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="GridContainer" parent="Control/VBox"]
margin_top = 53.0
margin_right = 912.0
margin_bottom = 53.0
size_flags_horizontal = 5
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticlesHBox" type="HBoxContainer" parent="Control"]
margin_left = 40.0
margin_top = 48.0
margin_right = 936.0
margin_bottom = 88.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProtonIcon" type="TextureRect" parent="Control/ParticlesHBox"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Protons" type="Label" parent="Control/ParticlesHBox"]
margin_left = 50.0
margin_top = 8.0
margin_right = 292.0
margin_bottom = 32.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NeutronIcon" type="TextureRect" parent="Control/ParticlesHBox"]
margin_left = 302.0
margin_right = 342.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Neutrons" type="Label" parent="Control/ParticlesHBox"]
margin_left = 352.0
margin_top = 8.0
margin_right = 594.0
margin_bottom = 32.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElectronIcon" type="TextureRect" parent="Control/ParticlesHBox"]
margin_left = 604.0
margin_right = 644.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Electrons" type="Label" parent="Control/ParticlesHBox"]
margin_left = 654.0
margin_top = 8.0
margin_right = 896.0
margin_bottom = 32.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="close_button_pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Tabs/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="Tabs/Materials" to="." method="_on_Materials_pressed"]
[connection signal="pressed" from="Tabs/Metals" to="." method="_on_Metals_pressed"]
[connection signal="pressed" from="Tabs/Atoms" to="." method="_on_Atoms_pressed"]
[connection signal="pressed" from="Tabs/Particles" to="." method="_on_Particles_pressed"]
[connection signal="mouse_entered" from="Control/ParticlesHBox/ProtonIcon" to="." method="show_part" binds= [ "proton" ]]
[connection signal="mouse_exited" from="Control/ParticlesHBox/ProtonIcon" to="." method="on_mouse_out"]
[connection signal="mouse_entered" from="Control/ParticlesHBox/NeutronIcon" to="." method="show_part" binds= [ "neutron" ]]
[connection signal="mouse_exited" from="Control/ParticlesHBox/NeutronIcon" to="." method="on_mouse_out"]
[connection signal="mouse_entered" from="Control/ParticlesHBox/ElectronIcon" to="." method="show_part" binds= [ "electron" ]]
[connection signal="mouse_exited" from="Control/ParticlesHBox/ElectronIcon" to="." method="on_mouse_out"]
